--- a/game.scss
+++ b/game.scss
@@ -38,6 +38,9 @@ body{
             border-radius: 5px;
             padding: 4px 8px;
             color: $fontColor;
+            &:hover {
+                border-color: $backColor;
+            }
         }
     }
 }
