--- a/game.css
+++ b/game.css
@@ -12,6 +12,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -23,14 +27,24 @@ body {
   background-color: #333;
 }
 
+body h1 {
+  color: white;
+  text-transform: capitalize;
+}
+
+body h1:hover {
+  cursor: pointer;
+  color: #d31515;
+}
+
 .game-container {
   width: 800px;
   max-width: 80%;
-  border: 3px solid red;
-  -webkit-box-shadow: 0px 0px 10px 2px red;
-          box-shadow: 0px 0px 10px 2px red;
+  -webkit-box-shadow: 0px 0px 10px 5px;
+          box-shadow: 0px 0px 10px 5px;
   padding: 10px;
   background-color: lightblue;
+  margin-top: 4em;
 }
 
 .game-container .button-grid {
@@ -51,5 +65,5 @@ body {
 }
 
 .game-container .button-grid .btn:hover {
-  border-color: #333;
+  background-color: #333;
 }
